--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <nav>
             <p>THURCORP</p>
             <ul>
-                <li>SERVIÇOS</li>
-                <li>CLIENTES</li>
-                <li>PARCEIROS</li>
-                <li>TIME</li>
-                <li>CONTATO</li>
+                <li><a href="#servicos">SERVIÇOS</a></li>
+                <li><a href="#clientes">CLIENTES</a></li>
+                <li><a href="#parceiros">PARCEIROS</a></li>
+                <li><a href="#time">TIME</a></li>
+                <li><a href="#contato">CONTATO</a></li>
             </ul>
         </nav>
 
@@ -31,7 +31,13 @@
                 Oferecemos os melhores serviços em 
                 desenvolvimentos de sites e aplicativos
             </p>
-            <img src="img/notebook1.jpg" width="400px">
+            <div>
+                <img src="img/notebook1.jpg" width="400px">
+            </div>
+            <div>
+                <img src="img/email1.png" width="300px">
+            </div>
+
         </section>
 
         <section id="clientes">
@@ -39,7 +45,12 @@
             <p>
                 Nossos clientes sempre ficam satisfeitos
             </p>
-            <img src="img/mulher1.png" width="400px">
+            <div>
+                <img src="img/mulher1.png" width="400px">
+            </div>
+            <div>
+                <img src="img/notebook2.jpg" width="300px">
+            </div>
         </section>
 
         <section id="parceiros">
@@ -53,9 +64,12 @@
         <section id="time">
             <h2>TIME</h2>
             <p>
-                Temos o melhor time de desenvolvedores
+                Temos o melhor time de desenvolvedores, 
+                nosso time trabalha com muito empenho e dedicação
             </p>
+            <div>
             <img src="img/time.jpg" width="400px">
+            </div>
         </section>
 
         <section id="contato">
@@ -63,14 +77,16 @@
             <p>
                 Nosso contato logo abaixo 
             </p>
+            <div>
             <img src="img/telefone_logo.png" width="100px">
+            </div>
             <p>
                 +55 (11) 0000-0000
             </p>
         </section>
 
         <footer>
-            <p>Desenvolvido por Arthur</p>
+            <p>Desenvolvido por Arthur C. A. Silva</p>
         </footer>
     </bory>
 
