--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Minha página</title>
+        <title>MakeSite</title>
     </head>
 
     <bory>
@@ -19,34 +19,26 @@
         </nav>
 
         <header>
-            <h1>Minha Página</h1>
+            <h1>MakeSite</h1>
             <p>Oferecemos os melhores sites 
-                e apps para sua empresa
-            </p>
+            e apps para sua empresa</p>
         </header>
 
         <section id="servicos">
             <h2>SERVIÇOS</h2>
-            <p>
-                Oferecemos os melhores serviços em 
-                desenvolvimentos de sites e aplicativos
-            </p>
+                <p>Oferecemos os melhores serviços em 
+                desenvolvimentos de sites e aplicativos</p>
             <div>
-                <img src="img/notebook1.jpg" width="400px">
-            </div>
-            <div>
-                <img src="img/email1.png" width="300px">
+                <img src="img/notebook1.jpg" width="300px">
             </div>
 
         </section>
 
         <section id="clientes">
             <h2>CLIENTES</h2>
-            <p>
-                Nossos clientes sempre ficam satisfeitos
-            </p>
+            <p>Nossos clientes sempre ficam satisfeitos</p>
             <div>
-                <img src="img/mulher1.png" width="400px">
+                <img src="img/mulher1.png" width="300px">
             </div>
             <div>
                 <img src="img/notebook2.jpg" width="300px">
@@ -55,34 +47,35 @@
 
         <section id="parceiros">
             <h2>PARCEIROS</h2>
-            <p>
-                Nossos parceiros sempre 
-                estão dispostos a te auxiliar
-            </p>
+                <p>Nosso parceiro sempre 
+                estará a sua disposição</p>
+            <div>
+                <a href="https://digitalinnovation.one/" target="_blank">
+                    <img src="img/DIO.png" width="100px">
+                </a>
+            </div>
         </section>
  
         <section id="time">
             <h2>TIME</h2>
-            <p>
-                Temos o melhor time de desenvolvedores, 
-                nosso time trabalha com muito empenho e dedicação
-            </p>
+            <p>Temos o melhor time de desenvolvedores, 
+                nosso time trabalha com muito empenho e dedicação</p>
             <div>
-            <img src="img/time.jpg" width="400px">
+                <img src="img/time.jpg" width="300px">
             </div>
         </section>
 
         <section id="contato">
             <h2>CONTATO</h2>
-            <p>
-                Nosso contato logo abaixo 
-            </p>
+            <p>Entre em contato com nossa equipe</p>
             <div>
-            <img src="img/telefone_logo.png" width="100px">
+                <img src="img/telefone_logo.png" width="50px">
+                <p><a href="tel:99999999999">(99) 99999-9999</a></p>
             </div>
-            <p>
-                +55 (11) 0000-0000
-            </p>
+            <div>
+                <img src="img/email1.png" width="50px">
+                <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+            </div>
         </section>
 
         <footer>
